rewrote it entirely to resolve the layout bug

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+:root{
+    --clr-body-bg: #1c1917;
+    --clr-display-bg: #6b7280;
+    --clr-btn: #52525b; 
+    --clr-operator-btn: #d97706;
+    --clr-uni-btn: #18181b;
+}
+
 *,
 *::before,
 *::after {
@@ -8,83 +16,71 @@
 
 body {
     max-width: 90%;
-    background-color: chocolate;
+    background-color: #FCB31B;
     margin-inline: auto;
 }
 
 .wrapper {
-    margin-top: 20dvh;
-    background-color: #27272a;
-    height: 65dvh;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--clr-body-bg);
+    border: 1px solid var(--clr-body-bg);
+    border-radius: 15px;
+    margin: 5rem auto;
+    margin-bottom: 2rem;
 }
 
 .display {
-    padding-block: 2rem;
-    padding-inline: 0.4rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100px;
-    margin-block: 1.3rem;
+    margin: 1rem;
 }
 
 #calc {
-    height: 3rem;
-    width: 95%;
-    margin-inline: auto;
-    font-size: 1.5rem;
+    width: 100%;
+    padding: 1rem;
+    font-size: 1.325rem;
     text-align: right;
-    border: 1px solid #616161;
-    border-radius: 7px;
+    border-radius: 10px;
+    color: whitesmoke;
 }
 
 .controls {
-    padding-block: 0.1rem;
-    padding-inline: 0.4rem;
+    width: 90%;
+    border: 1px solid var(--clr-display-bg);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 1.5rem;
+    gap: .5rem;
+    align-items: center;
     justify-items: center;
-    align-items: center;
-}
-
-#backspace {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 1rem;
+    padding: 1rem 0.3rem;
 }
 
 button {
-    width: 50px;
-    height: 50px;
-    border: 1px solid #616161;
+    width: 100%;
+    padding: 1rem 0;
+    font-size: 1.325rem;
+    background-color: var(--clr-btn);
+    border: 1px solid var(--clr-btn);
     border-radius: 50%;
-    background-color: #6161614e;
     color: whitesmoke;
-    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.5);
 }
 
-
-button:not(.backspace) {
-    font-size: 1.5rem;
+.operators {
+    color: var(--clr-operator-btn);
 }
 
-button.operators {
-    font-size: 2rem;
+button.unique {
+    background-color: var(--clr-operator-btn);
+    color: var(--clr-uni-btn);
 }
 
 .zero {
-    grid-column:span 2;
-    width: 100%;
-    border-radius: 50px;
-}
-
-.special {
-    color: darkorange;
-}
-
-.unique {
-    background-color: rgb(210, 105, 30);
-    color: whitesmoke;
+    grid-column: 1 / 3;
+    border-radius: 2.5rem;
 }
